Ativado features prereleased