@@ -21,7 +21,7 @@
 		<commons-lang3-version>3.14.0</commons-lang3-version>
 		<jakarta.persistence-api-version>3.1.0</jakarta.persistence-api-version>
 
-		<lombok-version>1.18.12</lombok-version>
+		<lombok-version>1.18.34</lombok-version>
 		<h2-version>2.3.230</h2-version>
 	</properties>
 
@@ -91,7 +91,34 @@
 		    <version>${h2-version}</version>
 		    <scope>test</scope>
 		</dependency>
-		
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.13.0</version>
+					<configuration>
+						<compilerArgs>
+							<compilerArg>--enable-preview</compilerArg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
